--- a/Tele-medicina/nbproject/project.properties
+++ b/Tele-medicina/nbproject/project.properties
@@ -44,7 +44,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${libs.jsf12.classpath}
+    ${libs.jsf12.classpath}:\
+    ${reference.tele-medicina-app.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,9 +72,10 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.tele-medicina-app=../negocio-Tele-medicina
+reference.tele-medicina-app.dist=${project.tele-medicina-app}/dist/tele-medicina-app.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
