--- a/Tele-medicina/nbproject/project.properties
+++ b/Tele-medicina/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mysql-connector-java-5.1.6-bin.jar=C:\\Users\\carlos andres\\Desktop\\mysql-connector-java-5.1.6-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +46,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.jsf12.classpath}:\
-    ${reference.tele-medicina-app.dist}
+    ${reference.tele-medicina-app.dist}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.6-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
